Agenda overlap layout fixed

--- a/public/assets/styles/agenda.css
+++ b/public/assets/styles/agenda.css
@@ -1,66 +1,30 @@
+/* Agenda in landing page */
 .agenda-container{
     width: 100vw;
-    height: auto;
-    background-color: white;
-    /* padding: 5% 10%; */
+    /* height: 70vh; */
+    background:var(--Gradient3);
+    padding-bottom: 6%;
 }
+
+.agenda-section{
+    max-width: 85vw;
+    display: flex;
+    flex-direction: row;
+    /* overflow-x: scroll; */
+    margin-top: 5%;
+}
+
+.agenda-card{
+    border-radius: 20px;
+    box-shadow: var(--Shadow);
+}
+
 .agenda-wrapper{
-    max-width: 100vw;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: auto;
-    border: 1px solid red;
-    /* overflow-x: scroll; */
-}
-
-.agenda-header{
-    width: 100vw;
-    background: var(--Gradient3);
-    margin-bottom: 30px;
-}
-
-.agenda-header h1{
-    font-family: 'Spartan', sans-serif;
-    font-weight: 900;
-    font-size: 50px;
-    color: white;
-    text-align: center;
-    /* border: 1px solid red; */
-    margin-top: 20%;
-    margin-bottom: 5%;
-    width: 85%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.agenda-grid{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    height: auto;
-    width: 100%;
-    margin: 20px auto;
-    gap: 10px;
-}
-
-.agenda-card{
-    width: 300px;
-    height: 450px;
-    background-color: white;
-    box-shadow: var(--Shadow);
-    border-radius: 20px;
-    margin: auto;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.calendar-agenda-wrapper{
-    max-width: 85vw;
-    display: flex;
-    flex-direction: row; /*Will change to column in media query*/
-    border: 1px solid red;
 }
 
 .h1-title-wrapper{
@@ -70,19 +34,6 @@
     padding: 0;
     margin: 0;
     top: -1px;
-}
-
-.agenda-img-cont{
-    height: 380px;
-    width: 300px;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.agenda-img-cont img{
-    height: 300px;
 }
 
 .h1-section-agenda{
@@ -113,55 +64,169 @@
     color: white;
 }
 
-.agenda-text-cont{
+/* Agenda Page */
+
+.agenda-page-container{
+    width: 100vw;
+    height: auto;
+    background-color: white;
+    /* padding: 5% 10%; */
+}
+.agenda-page-wrapper{
+    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    border: 1px solid red;
+    /* overflow-x: scroll; */
+}
+
+.agenda-page-header{
+    width: 100vw;
+    background: var(--Gradient3);
+    margin-bottom: 30px;
+}
+
+.agenda-page-header h1{
+    font-family: 'Spartan', sans-serif;
+    font-weight: 900;
+    font-size: 50px;
+    color: white;
+    text-align: center;
+    /* border: 1px solid red; */
+    margin-top: 20%;
+    margin-bottom: 5%;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.agenda-page-grid{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    height: auto;
+    width: 100%;
+    margin: 20px auto;
+    gap: 10px;
+}
+
+.agenda-page-card{
+    width: 300px;
+    height: 450px;
+    background-color: white;
+    box-shadow: var(--Shadow);
+    border-radius: 20px;
+    margin: auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.calendar-agenda-page-wrapper{
+    max-width: 85vw;
+    display: flex;
+    flex-direction: row; /*Will change to column in media query*/
+    border: 1px solid red;
+}
+
+.h1-title-wrapper{
+    position: relative;
+    background-color: var(--BaseLightBeige)!important;
+    width: 100vw;
+    padding: 0;
+    margin: 0;
+    top: -1px;
+}
+
+.agenda-page-img-cont{
+    height: 380px;
+    width: 300px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.agenda-page-img-cont img{
+    height: 300px;
+}
+
+.h1-section-agenda-page{
+    background: rgb(164,203,252);
+    background: linear-gradient(217deg, rgba(164,203,252,1) 0%, rgba(103,88,157,1) 210%);
+}
+
+.custom-arrow{
+    display: block;
+    text-align: center;
+    background-color: var(--DarkGrey);
+    text-decoration: none!important;
+    height: 37px;
+    width: 50px;
+    border-radius: 20px;
+    padding: 5px;
+    margin: auto;
+    cursor: pointer;
+}
+
+.custom-arrow span{
+    display: block;
+    margin: auto;
+    line-height: 100%;
+    text-align: center;
+    text-decoration: none!important;
+    color: white;
+}
+
+.agenda-page-text-cont{
     width: 90%;
     margin: 10px auto;
     /* border: 1px solid blue; */
 }
 
 @media screen and (max-width: 1350px){
-    .agenda-grid{
+    .agenda-page-grid{
         grid-template-columns: auto auto auto;
     }
 }
 
 @media screen and (max-width: 1014px){
-    .agenda-grid{
+    .agenda-page-grid{
         grid-template-columns: auto auto;
     }
 }
 
 @media screen and (max-width: 670px){
-    .agenda-grid{
+    .agenda-page-grid{
         grid-template-columns: auto;
     }
-    .speaker-card{
+    .agenda-page-card{
         width: 320px;
         height: 450px;
     }
-    .speaker-img-cont{
+    .agenda-page-img-cont{
         height: 380px;
         width: 320px;
     }
-    .agenda-title,
-    .sp-agenda-title{
+    .agenda-page-title{
         font-size: 40px;
     }
 }
 @media screen and (max-width: 342px){
-    .agenda-grid{
+    .agenda-page-grid{
         grid-template-columns: auto;
     }
-    .speaker-card{
+    .agenda-page-card{
         width: 260px;
         height: 450px;
     }
-    .speaker-img-cont{
+    .agenda-page-img-cont{
         height: 260px;
         width: 300px;
     }
-    .agenda-title,
-    .sp-agenda-title{
+    .agenda-page-title{
         font-size: 30px;
     }
 }
